[project]
name = "c14"
version = "0.1.0"
description = "Projeto de C14 - Engenharia de Software"
authors = [
    {name = "iuryt7",email = "iury.teixeira07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
