[project]
name = "C14"
version = "0.1.0"
description = "Projeto de C14 - Engenharia de Software"
authors = [
    {name = "iuryt7",email = "iury.teixeira07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.09"
dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

packages = [
    { include = "C14" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.1.1"

